# fish-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  LAZYLLM_INTEGRATION.md  LICENSE  README-PT.md  README.md  bump-version.fish  demo.cast  prek.toml  pyproject.toml  test-deepseek-guide.md
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: assign-shirt-size.yaml  automerge-dependency-updates.yaml  azure-test-tapes.yaml  badge-popularity.yaml  badge-work-estimate.yaml  badges.yaml  bump-version.yaml  code-analysis.yaml  dependabot-automerge.yaml  git-hooks.yaml  installation-tests.yaml  janitor.yaml  linkspector.yaml  python-tests.yaml  rebase.yaml  release.yaml  supply-chain-security.yaml  test-tapes.yaml  translate-docs.yaml  welcome.yaml
conf.d/: ai.fish  create_completion.fish  fish_ai.fish  fish_ai.zsh
functions/: _fish_ai.fish  _fish_ai_autocomplete.fish  _fish_ai_autocomplete.py  _fish_ai_autocomplete.zsh  _fish_ai_autocomplete_or_fix.fish  _fish_ai_autocomplete_or_fix.zsh  _fish_ai_codify.fish  _fish_ai_codify.py  _fish_ai_codify.zsh  _fish_ai_codify_or_explain.fish  _fish_ai_codify_or_explain.zsh  _fish_ai_engine.py  _fish_ai_explain.fish  _fish_ai_explain.py  _fish_ai_explain.zsh  _fish_ai_fix.fish  _fish_ai_fix.py  _fish_ai_fix.zsh  _fish_ai_transform.fish  autocomplete.py  codify.fish  codify.py  create_completion.fish  engine.py  explain.fish  explain.py  fish_ai_bug_report.fish  fish_ai_bug_report.zsh  fish_ai_put_api_key.fish  fish_ai_put_api_key.zsh  fish_ai_switch_context.fish  fish_ai_switch_context.zsh
ops/: bloat-analysis.fish  bump-version.fish  bump-version.zsh  create-changelog.fish  create-changelog.zsh  fork.fish  git-nowhere.fish  pr-checkout.fish  supported-versions-check.fish  supported-versions-check.zsh
src/fish_ai/: autocomplete.py  codify.py  config.py  engine.py  explain.py  fix.py  put_api_key.py  redact.py  switch_context.py
src/fish_ai/tests/: autocomplete_test.py  codify_test.py  config_test.py  engine_test.py  explain_test.py  fix_test.py  openai_test.py  redact_test.py
test/: config.ini  tape.fish
test/tapes/: codify.fish
tests/archlinux/: Dockerfile
tests/archlinux-base/: Dockerfile
tests/azure-openai/: Dockerfile
tests/azure-openai/tapes/: autocomplete.fish
tests/fedora/: Dockerfile
tests/ubuntu/: Dockerfile
tests/ubuntu-22/: Dockerfile
