[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fish_ai"
version = "2.11.1"
authors = [{ name = "Bastian Fredriksson", email = "realiserad@gmail.com" }]
description = "Provides core functionality for fish-ai, an AI plugin for the fish shell."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai==2.31.0",
  "simple-term-menu==1.6.6",
  "iterfzf==1.9.0.67.0",
  "mistralai==2.3.1",
  "binaryornot==0.6.0",
  "anthropic==0.93.0",
  "keyring==25.7.0",
  "groq==1.1.2",
  "google-genai==1.71.0",
  "httpx[socks]==0.28.1",
  "aws-bedrock-token-generator==1.1.0"
]

[project.urls]
"Homepage" = "https://github.com/realiserad/fish-ai"
"Bug Tracker" = "https://github.com/realiserad/fish-ai/issues"

[project.scripts]
fix = "fish_ai.fix:fix"
codify = "fish_ai.codify:codify"
explain = "fish_ai.explain:explain"
autocomplete = "fish_ai.autocomplete:autocomplete"
switch_context = "fish_ai.switch_context:switch_context"
put_api_key = "fish_ai.put_api_key:put_api_key"
lookup_setting = "fish_ai.config:lookup_setting"
put_setting = "fish_ai.config:put_setting"
refine = "fish_ai.autocomplete:refine_completions"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["src/fish_ai/tests"]
